chore: update site [skip lerna]

--- a/site/ajax-provider/base.html
+++ b/site/ajax-provider/base.html
@@ -1,9 +1,11 @@
-<!DOCTYPE html><html lang="en"><head>
+<!doctype html>
+<html lang="en">
+  <head>
     <title>Demo - ajax-provider</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta charset="utf-8">
-    <link rel="icon" href="assets/favicon.svg" sizes="any" type="image/svg+xml">
-    <meta name="description" content="Demo Base - ajax-provider">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="utf-8" />
+    <link rel="icon" href="favicon.svg" sizes="any" type="image/svg+xml" />
+    <meta name="description" content="Demo Base - ajax-provider" />
     <style>
       html,
       body {
@@ -15,7 +17,6 @@
   </head>
   <body>
     <ajax-provider-component></ajax-provider-component>
-    
-  
-
-<script type="module" src="./assets/ajax-provider-component-U83eAY3U.js"></script></body></html>
+    <script type="module" src="./entry.js"></script>
+  </body>
+</html>
