--- a/site/blockquote-base-embedded-webview/index.html
+++ b/site/blockquote-base-embedded-webview/index.html
@@ -1,9 +1,11 @@
-<!DOCTYPE html><html lang="en"><head>
+<!doctype html>
+<html lang="en">
+  <head>
     <title>Demo - blockquote-base-embedded-webview</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta charset="utf-8">
-    <link rel="icon" href="assets/favicon.svg" sizes="any" type="image/svg+xml">
-    <meta name="description" content="All Demos - blockquote-base-embedded-webview">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="utf-8" />
+    <link rel="icon" href="favicon.svg" sizes="any" type="image/svg+xml" />
+    <meta name="description" content="All Demos - blockquote-base-embedded-webview" />
     <style>
       html,
       body {
@@ -15,11 +17,16 @@
   </head>
   <body>
     <blockquote-base-embedded-webview heading="blockquote-base-embedded-webview">
-      <template data-src="./base.html" data-option="Base" data-description="base - description"></template>
-      <template data-src="./other.html" data-option="Other" data-description="other - description"></template>
+      <template
+        data-src="./base.html"
+        data-option="Base"
+        data-description="base - description"></template>
+      <template
+        data-src="./other.html"
+        data-option="Other"
+        data-description="other - description"></template>
     </blockquote-base-embedded-webview>
 
-    
-  
-
-<script type="module" src="./assets/blockquote-base-embedded-webview-B5jtR-9f.js"></script></body></html>
+    <script type="module" src="./entry.js"></script>
+  </body>
+</html>
