--- a/site/blockquote-base-embedded-webview/other.html
+++ b/site/blockquote-base-embedded-webview/other.html
@@ -1,9 +1,11 @@
-<!DOCTYPE html><html lang="en"><head>
+<!doctype html>
+<html lang="en">
+  <head>
     <title>Other - blockquote-base-embedded-webview</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta charset="utf-8">
-    <link rel="icon" href="assets/favicon.svg" sizes="any" type="image/svg+xml">
-    <meta name="description" content="Demo Other - blockquote-base-embedded-webview">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="utf-8" />
+    <link rel="icon" href="favicon.svg" sizes="any" type="image/svg+xml" />
+    <meta name="description" content="Demo Other - blockquote-base-embedded-webview" />
     <style>
       :root {
         font: normal medium/1.25 sans-serif;
@@ -31,6 +33,5 @@
       <h1 class="sr-only">blockquote-base-embedded-webview</h1>
       <p>other.html</p>
     </main>
-  
-
-</body></html>
+  </body>
+</html>
