--- a/site/blockquote-controller-context-meta/base.html
+++ b/site/blockquote-controller-context-meta/base.html
@@ -1,8 +1,10 @@
-<!DOCTYPE html><html lang="en"><head>
-    <meta charset="utf-8">
-    <link rel="icon" href="assets/favicon.svg" sizes="any" type="image/svg+xml">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Demo Base - blockquote-controller-context-meta">
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="favicon.svg" sizes="any" type="image/svg+xml" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Demo Base - blockquote-controller-context-meta" />
     <title>Base - blockquote-controller-context-meta</title>
     <style>
       :root {
@@ -37,13 +39,14 @@
       </p>
       <p>
         Orginal example from lit.dev:
-        <a href="https://lit.dev/playground/#sample=examples/context-consume-provide" target="_blank">
+        <a
+          href="https://lit.dev/playground/#sample=examples/context-consume-provide"
+          target="_blank">
           https://lit.dev/playground/#sample=examples/context-consume-provide
         </a>
       </p>
       <my-app></my-app>
     </main>
-    
-  
-
-<script type="module" src="./assets/my-app-Bs0IP38P.js"></script></body></html>
+    <script type="module" src="./entry.js"></script>
+  </body>
+</html>
