--- a/site/blockquote-controller-xstate/base.html
+++ b/site/blockquote-controller-xstate/base.html
@@ -1,8 +1,10 @@
-<!DOCTYPE html><html lang="en"><head>
-    <meta charset="utf-8">
-    <link rel="icon" href="assets/favicon.svg" sizes="any" type="image/svg+xml">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Demo Base - blockquote-controller-xstate">
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="favicon.svg" sizes="any" type="image/svg+xml" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Demo Base - blockquote-controller-xstate" />
     <title>Base - blockquote-controller-rxjs</title>
     <style>
       :root {
@@ -36,13 +38,15 @@
             XState
           </a>
           and
-          <a href="https://lit.dev/docs/composition/controllers/" target="_blank" rel="noopener noreferrer">
+          <a
+            href="https://lit.dev/docs/composition/controllers/"
+            target="_blank"
+            rel="noopener noreferrer">
             Lit Controller
           </a>
         </p>
       </xstate-counter>
     </main>
-    
-  
-
-<script type="module" src="./assets/xstate-counter-C-oibhva.js"></script></body></html>
+    <script type="module" src="./entry.js"></script>
+  </body>
+</html>
