--- a/site/blockquote-mixin-slot-content/index.html
+++ b/site/blockquote-mixin-slot-content/index.html
@@ -1,9 +1,11 @@
-<!DOCTYPE html><html lang="en"><head>
+<!doctype html>
+<html lang="en">
+  <head>
     <title>Demo - blockquote-mixin-slot-content</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta charset="utf-8">
-    <link rel="icon" href="assets/favicon.svg" sizes="any" type="image/svg+xml">
-    <meta name="description" content="All Demos - blockquote-mixin-slot-content">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="utf-8" />
+    <link rel="icon" href="favicon.svg" sizes="any" type="image/svg+xml" />
+    <meta name="description" content="All Demos - blockquote-mixin-slot-content" />
     <style>
       html,
       body {
@@ -17,9 +19,10 @@
     <blockquote-base-embedded-webview heading="blockquote-mixin-slot-content">
       <template data-src="./base.html" data-option="Base"></template>
       <template data-src="./slots-on-the-fly.html" data-option="Slots on the fly"></template>
-      <template data-src="./composition-with-slots.html" data-option="Composition with slots"></template>
+      <template
+        data-src="./composition-with-slots.html"
+        data-option="Composition with slots"></template>
     </blockquote-base-embedded-webview>
-    
-  
-
-<script type="module" src="./assets/inline-module-1a4c7f2893aa6099250523c17a094b56-Bi_sKjRU.js"></script></body></html>
+    <script type="module" src="./entry.js"></script>
+  </body>
+</html>
