--- a/site/ajax-provider/index.html
+++ b/site/ajax-provider/index.html
@@ -1,9 +1,11 @@
-<!DOCTYPE html><html lang="en"><head>
+<!doctype html>
+<html lang="en">
+  <head>
     <title>Demo - ajax-provider</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta charset="utf-8">
-    <link rel="icon" href="assets/favicon.svg" sizes="any" type="image/svg+xml">
-    <meta name="description" content="All Demos - ajax-provider">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="utf-8" />
+    <link rel="icon" href="favicon.svg" sizes="any" type="image/svg+xml" />
+    <meta name="description" content="All Demos - ajax-provider" />
     <style>
       html,
       body {
@@ -18,7 +20,7 @@
       <template data-src="./base.html" data-option="Base"></template>
       <template data-src="./dm-currecies.html" data-option="Data manager"></template>
     </blockquote-base-embedded-webview>
-    
-  
 
-<script type="module" src="./assets/inline-module-1a4c7f2893aa6099250523c17a094b56-Ck5csI3f.js"></script></body></html>
+    <script type="module" src="./index.js"></script>
+  </body>
+</html>
