--- a/site/blockquote-controller-xstate/index.html
+++ b/site/blockquote-controller-xstate/index.html
@@ -1,9 +1,11 @@
-<!DOCTYPE html><html lang="en"><head>
+<!doctype html>
+<html lang="en">
+  <head>
     <title>Demo - blockquote-controller-xstate</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta charset="utf-8">
-    <link rel="icon" href="assets/favicon.svg" sizes="any" type="image/svg+xml">
-    <meta name="description" content="All Demos - blockquote-controller-xstate">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="utf-8" />
+    <link rel="icon" href="favicon.svg" sizes="any" type="image/svg+xml" />
+    <meta name="description" content="All Demos - blockquote-controller-xstate" />
     <style>
       html,
       body {
@@ -14,10 +16,12 @@
     </style>
   </head>
   <body>
-    <blockquote-base-embedded-webview screen-size-selected="5" heading="blockquote-controller-xstate">
+    <blockquote-base-embedded-webview
+      screen-size-selected="5"
+      heading="blockquote-controller-xstate">
       <template data-src="./base.html" data-option="Base"></template>
     </blockquote-base-embedded-webview>
-    
-  
 
-<script type="module" src="./assets/inline-module-1a4c7f2893aa6099250523c17a094b56-Bi_sKjRU.js"></script></body></html>
+    <script type="module" src="./entry.js"></script>
+  </body>
+</html>
