--- a/site/blockquote-dialog/base.html
+++ b/site/blockquote-dialog/base.html
@@ -1,8 +1,10 @@
-<!DOCTYPE html><html lang="en" dark="_mode"><head>
-    <meta charset="utf-8">
-    <link rel="icon" href="assets/favicon.svg" sizes="any" type="image/svg+xml">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Demo Base - blockquote-dialog">
+<!doctype html>
+<html lang="en" dark="_mode">
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="favicon.svg" sizes="any" type="image/svg+xml" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Demo Base - blockquote-dialog" />
     <title>Base - blockquote-dialog</title>
     <style>
       :root {
@@ -40,25 +42,24 @@
     <main>
       <h1 class="sr-only">blockquote-dialog</h1>
       <button id="open-dialog">Open dialog</button>
-
       <wrapper-dialog>
         <blockquote-dialog label="All fields are required">
           <form method="dialog">
             <div>
-              <button aria-label="close" formnovalidate="">X</button>
+              <button aria-label="close" formnovalidate>X</button>
             </div>
             <h2>MLW Registration</h2>
             <p>All fields are required</p>
             <p>
               <label>
                 Name:
-                <input autofocus="" type="text" name="name" required="">
+                <input autofocus type="text" name="name" required />
               </label>
             </p>
             <p>
               <label>
                 Warranty:
-                <input type="number" min="0" max="10" step="1" name="warranty" required="">
+                <input type="number" min="0" max="10" step="1" name="warranty" required />
               </label>
             </p>
             <p>
@@ -79,7 +80,7 @@
         </blockquote-dialog>
       </wrapper-dialog>
     </main>
-    
+    <script type="module" src="./entry.js"></script>
     <script>
       class WrapperDialog extends HTMLElement {
         constructor() {
@@ -135,6 +136,5 @@
         console.log('submit:', ev.target, ev.submitter);
       });
     </script>
-  
-
-<script type="module" src="./assets/blockquote-dialog-DSw07VvG.js"></script></body></html>
+  </body>
+</html>
