--- a/site/blockquote-directive-svg-to-data-image/base.html
+++ b/site/blockquote-directive-svg-to-data-image/base.html
@@ -1,9 +1,11 @@
-<!DOCTYPE html><html lang="en"><head>
+<!doctype html>
+<html lang="en">
+  <head>
     <title>Base - blockquote-directive-svg-to-data-image</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta charset="utf-8">
-    <link rel="icon" href="assets/favicon.svg" sizes="any" type="image/svg+xml">
-    <meta name="description" content="Demo Base - blockquote-directive-svg-to-data-image">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="utf-8" />
+    <link rel="icon" href="favicon.svg" sizes="any" type="image/svg+xml" />
+    <meta name="description" content="Demo Base - blockquote-directive-svg-to-data-image" />
     <style>
       :root {
         /* https://stackoverflow.com/questions/42330075/is-there-a-way-to-interpolate-css-variables-with-url#answer-42331003 */
@@ -36,7 +38,116 @@
       <bg-element bg-fill="hsl(0deg, 0%, 13%, 0.98)"></bg-element>
     </main>
 
-    
-  
+    <script type="module">
+      import {html, LitElement, css, svg, blockquoteDirectiveSvgToDataImage} from './entry.js';
 
-<script type="module" src="./assets/inline-module-3a5568639b0503d57e6884982e364608-Bw4XIDAC.js"></script></body></html>
+      class BgElement extends LitElement {
+        static get properties() {
+          return {
+            /**
+             * svg - background color
+             * @type {String}
+             */
+            bgFill: {
+              type: 'String',
+              attribute: 'bg-fill',
+            },
+          };
+        }
+
+        constructor() {
+          super();
+          this.bgFill = 'rgb(32, 32, 32)';
+        }
+
+        static get styles() {
+          return css`
+            :host {
+              display: flex;
+              flex-direction: column;
+              align-items: center;
+              justify-content: center;
+              box-sizing: border-box;
+            }
+
+            a {
+              display: block;
+              width: 6.25rem;
+              height: 6.25rem;
+              border-radius: 50%;
+              background: center center / cover no-repeat;
+            }
+
+            /*
+              https://zellwk.com/blog/style-hover-focus-active-states
+              https://bugs.webkit.org/show_bug.cgi?id=20807
+            */
+            a:hover,
+            a:focus,
+            a:active {
+              outline: 2px dashed rgb(184, 184, 184);
+              outline-offset: 2px;
+            }
+
+            .sr-only {
+              position: absolute;
+              width: 1px;
+              height: 1px;
+              padding: 0;
+              margin: -1px;
+              overflow: hidden;
+              clip: rect(0, 0, 0, 0);
+              white-space: nowrap;
+              border: 0;
+            }
+          `;
+        }
+
+        get _bgTpl() {
+          return svg` <circle fill="${this.bgFill}" cx="100" cy="100" r="100"></circle> `;
+        }
+
+        get _shapeTpl() {
+          return svg`
+            <g fill="#fff">
+              <circle cx="100" cy="35.819" r="14.926"></circle>
+              <path
+                d="M164.771 50.73a7.459 7.459 0 0 0-8.814-5.802L100 56.465 44.043 44.928a7.46 7.46 0 0 0-8.815 5.802 7.461 7.461 0 0 0 5.803 8.815l41.805 8.62v45.563l-11.782 56.387a7.46 7.46 0 0 0 5.778 8.83c.515.107 1.028.16 1.535.16a7.467 7.467 0 0 0 7.297-5.938l12.015-57.498c.224-1.188 1.086-2.237 2.323-2.237 1.236 0 2.123 1.049 2.322 2.237l12.016 57.498a7.464 7.464 0 0 0 8.831 5.778 7.458 7.458 0 0 0 5.776-8.83l-11.781-56.391V68.166l41.807-8.62a7.46 7.46 0 0 0 5.798-8.816z"
+              ></path>
+            </g>
+          `;
+        }
+
+        get _svgTag() {
+          return html`
+            <svg
+              id="${Math.random().toString(36).substring(2, 10)}"
+              xmlns="http://www.w3.org/2000/svg"
+              width="200"
+              height="200"
+              focusable="false"
+              role="presentation"
+              viewBox="0 0 200 200">
+              ${this._bgTpl} ${this._shapeTpl}
+            </svg>
+          `;
+        }
+
+        render() {
+          return html`
+            <a
+              target="_blank"
+              rel="noopener noreferrer"
+              href="https://accessibility-club.org/"
+              style="background-image:var(--bgUrl,
+              url('${blockquoteDirectiveSvgToDataImage(this._svgTag)}'));">
+              <span class="sr-only">Accessibility Club</span>
+            </a>
+          `;
+        }
+      }
+
+      customElements.define('bg-element', BgElement);
+    </script>
+  </body>
+</html>
