--- a/site/blockquote-directive-svg-to-data-image/index.html
+++ b/site/blockquote-directive-svg-to-data-image/index.html
@@ -1,9 +1,11 @@
-<!DOCTYPE html><html lang="en"><head>
+<!doctype html>
+<html lang="en">
+  <head>
     <title>Demo - blockquote-directive-svg-to-data-image</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta charset="utf-8">
-    <link rel="icon" href="assets/favicon.svg" sizes="any" type="image/svg+xml">
-    <meta name="description" content="All Demos - blockquote-directive-svg-to-data-image">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="utf-8" />
+    <link rel="icon" href="favicon.svg" sizes="any" type="image/svg+xml" />
+    <meta name="description" content="All Demos - blockquote-directive-svg-to-data-image" />
     <style>
       html,
       body {
@@ -18,7 +20,6 @@
       <template data-src="./base.html" data-option="Base"></template>
       <template data-src="./simple.html" data-option="Simple"></template>
     </blockquote-base-embedded-webview>
-    
-  
-
-<script type="module" src="./assets/inline-module-1a4c7f2893aa6099250523c17a094b56-Bu4M6QdH.js"></script></body></html>
+    <script type="module" src="./entry.js"></script>
+  </body>
+</html>
