--- a/site/blockquote-tabs/base.html
+++ b/site/blockquote-tabs/base.html
@@ -1,8 +1,10 @@
-<!DOCTYPE html><html lang="en" dark="_mode"><head>
-    <meta charset="utf-8">
-    <link rel="icon" href="assets/favicon.svg" sizes="any" type="image/svg+xml">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Demo Base - blockquote-tabs">
+<!doctype html>
+<html lang="en" dark="_mode">
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="favicon.svg" sizes="any" type="image/svg+xml" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Demo Base - blockquote-tabs" />
     <title>Base - blockquote-tabs</title>
     <style>
       :root {
@@ -76,10 +78,9 @@
         </blockquote-tabpanel>
       </blockquote-tabs>
     </main>
-    
+    <script type="module" src="./entry.js"></script>
     <script>
       document.addEventListener('selectedchange', ({detail}) => console.log(detail));
     </script>
-  
-
-<script type="module" src="./assets/blockquote-tabs-CeOTBXIH.js"></script></body></html>
+  </body>
+</html>
